@@ -1,6 +1,18 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+17 Nov 2005, PHP 5.1 Release Candidate 6
+- Make zend_parse_params handle integers in a non-strict fashion, but emit an 
+  E_NOTICE on non well formed interger values. (Ilia)
+- Fixed bug #35249 (compile failure when ext/readline is compiled as shared).
+  (Jani)
+- Fixed bug #35248 (sqlite_query() doesnt set error_msg when return value is
+  being used). (Ilia) 
+- Fixed bug #35079 (stream_set_blocking(true) toggles, not enables 
+  blocking). (askalski at gmail dot com, Tony)
+
 16 Nov 2005, PHP 5.1 Release Candidate 5
+- Added an E_STRICT warning on the usage of {} for accessing of string offsets.
+  (Ilia)
 - Changed type hints to allow "null" as default value for class and array.
   (Marcus, Derick, Dmitry)
 - Fixed __get/__set to allow recursive calls for different properties. (Dmitry)
@@ -19,8 +31,6 @@ PHP                                                                        NEWS
 - Fixed bug #35142 (SOAP Client/Server Complex Object Support). (Dmitry)
 - Fixed bug #35135 (PDOStatment without related PDO object may crash). (Ilia)
 - Fixed bug #35091 (SoapClient leaks memory). (Dmitry)
-- Fixed bug #35079 (stream_set_blocking(true) toggles, not enables 
-  blocking). (askalski at gmail dot com, Tony)
 - Fixed bug #35078 (configure does not find ldap_start_tls_s). (Jani)
 - Fixed bugs #35022, #35019 (Regression in the behavior of key() and current()
   functions). (Ilia)
